--- a/auth/package.json
+++ b/auth/package.json
@@ -25,6 +25,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "express-validator": "^7.2.1"
+    "express-validator": "^7.2.1",
+    "mongoose": "^8.13.2"
   }
 }
