--- a/auth/package.json
+++ b/auth/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cookie-session": "^2.0.49",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
     "dotenv": "^16.4.7",
@@ -25,7 +26,10 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.9",
+    "cookie-session": "^2.1.0",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2"
   }
 }
