--- a/auth/package.json
+++ b/auth/package.json
@@ -13,14 +13,20 @@
   "devDependencies": {
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
+    "@types/supertest": "^6.0.3",
     "dotenv": "^16.4.7",
     "eslint": "^9.24.0",
     "express": "^5.1.0",
     "install": "^0.13.0",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
     "nodemon": "^3.1.9",
     "npm": "^10.9.2",
     "prettier": "^3.5.3",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
