--- a/auth/package.json
+++ b/auth/package.json
@@ -43,6 +43,7 @@
     "cookie-session": "^2.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "ts-node-dev": "^2.0.0",
     "mongoose": "^8.13.2"
   }
 }
