--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,7 +2,9 @@ FROM node:alpine
 
 WORKDIR /app
 COPY package.json .
-RUN npm install 
+RUN npm install
 COPY . .
 
-CMD [ "npm", "start" ]
+
+EXPOSE 3000
+CMD ["npm", "run","dev"]
