refactor: update client package structure and dependencies
- Changed version from 1.0.0 to 0.1.0 and added private flag in package.json.
- Updated scripts for development, build, start, and linting.
- Added new devDependencies for TypeScript, ESLint, and Tailwind CSS.
- Removed unused Bootstrap CSS import and deleted _app.js.
- Removed old signup and landing page implementations.
- Added PostCSS configuration for Tailwind CSS.
- Introduced new SVG assets for icons and branding.
- Created new API utility for Axios requests.
- Implemented new Sign In and Sign Up pages with improved UI.
- Added a Header component for navigation.
- Created a Dashboard page with placeholder content.
- Established global CSS styles using Tailwind CSS.
- Developed a custom hook for handling API requests.
- Set up a new layout structure for the application.
- Implemented a new home page with user authentication check.
- Added TypeScript configuration for improved type safety.
- Updated skaffold.yaml to sync TypeScript files correctly.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 auth/node_modules
 client/node_modules
+clientjs/node_modules
 
 //kubectl create secret generic jwt-secret --from-literal={key}={value}
