--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ client/node_modules
 clientjs/node_modules
 
 //kubectl create secret generic jwt-secret --from-literal={key}={value}
+//kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.12.2/deploy/static/provider/cloud/deploy.yaml
