--- a/auth/package.json
+++ b/auth/package.json
@@ -39,11 +39,12 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@risvantickets/common": "^1.0.3",
     "@types/jsonwebtoken": "^9.0.9",
     "cookie-session": "^2.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "ts-node-dev": "^2.0.0",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "ts-node-dev": "^2.0.0"
   }
 }
