--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -10,21 +10,21 @@ spec:
     - host: ticketing.dev
       http:
         paths:
-          - path: /api/users/.*
+          - path: /api/users/?(.*)
             pathType: ImplementationSpecific
             backend:
               service:
                 name: auth-srv
                 port:
                   number: 3000
-          - path: /api/tickets/.*
+          - path: /api/tickets/?(.*)
             pathType: ImplementationSpecific
             backend:
               service:
                 name: tickets-srv
                 port:
                   number: 3000
-          - path: /.*
+          - path: /?(.*)
             pathType: ImplementationSpecific
             backend:
               service:
