--- a/tickets/package.json
+++ b/tickets/package.json
@@ -45,6 +45,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "mongoose-update-if-current": "^1.4.0",
     "ts-node-dev": "^2.0.0"
   }
 }
