--- a/orders/package.json
+++ b/orders/package.json
@@ -39,12 +39,13 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@risvantickets/common": "^1.0.7",
+    "@risvantickets/common": "^1.0.8",
     "@types/jsonwebtoken": "^9.0.9",
     "cookie-session": "^2.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "mongoose-update-if-current": "^1.4.0",
     "ts-node-dev": "^2.0.0"
   }
 }
