--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ auth/node_modules
 client/node_modules
 tickets/node_modules
 orders/node_modules
+expiration/node_modules
 
 //kubectl create secret generic jwt-secret --from-literal={key}={value}
 //kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.12.2/deploy/static/provider/cloud/deploy.yaml
