feat(payments): initialize payments service with Express, NATS, and MongoDB
- Added package.json with dependencies and scripts for the payments service.
- Created app.ts to set up Express server with routes and error handling.
- Implemented index.ts to connect to NATS and MongoDB, and start the server.
- Added NATS wrapper and connection logic for event-driven architecture.
- Included Jest setup for testing with MongoDB in-memory server.
- Configured TypeScript with tsconfig.json for strict type checking.
- Updated skaffold.yaml to include payments service for deployment.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ client/node_modules
 tickets/node_modules
 orders/node_modules
 expiration/node_modules
+payments/node_modules
 
 //kubectl create secret generic jwt-secret --from-literal={key}={value}
 //kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.12.2/deploy/static/provider/cloud/deploy.yaml
