--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -40,6 +40,14 @@ build:
         manual:
           - src: "src/**.*.ts"
             dest: .
+    - image: mohammedrisvanvm/payments
+      context: payments
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**.*.ts"
+            dest: .
     - image: mohammedrisvanvm/client
       context: client
       docker:
