--- a/expiration/package.json
+++ b/expiration/package.json
@@ -25,8 +25,7 @@
   },
   "dependencies": {
     "@risvantickets/common": "^1.0.11",
-    "@types/bull": "^3.15.9",
-    "bull": "^4.16.5",
+    "bullmq": "^5.61.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
