--- a/payments/package.json
+++ b/payments/package.json
@@ -46,6 +46,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "mongoose-update-if-current": "^1.4.0",
+    "stripe": "^19.1.0",
     "ts-node-dev": "^2.0.0"
   }
 }
