--- a/infra/k8s/frontend-depl.yaml
+++ b/infra/k8s/frontend-depl.yaml
@@ -1,30 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: client-depl
+  name: frontend-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: client
+      app: frontend
   template:
     metadata:
       labels:
-        app: client
+        app: frontend
     spec:
       containers:
-        - name: client
-          image: mohammedrisvanvm/client
+        - name: frontend
+          image: mohammedrisvanvm/frontend
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: client-srv
+  name: frontend-srv
 spec:
   selector:
-    app: client
+    app: frontend
   ports:
-    - name: client
+    - name: frontend
       protocol: TCP
       port: 3000
       targetPort: 3000
