--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -48,8 +48,8 @@ build:
         manual:
           - src: "src/**.*.ts"
             dest: .
-    - image: mohammedrisvanvm/client
-      context: client
+    - image: mohammedrisvanvm/frontend
+      context: frontend
       docker:
         dockerfile: Dockerfile
       sync:
