--- a/tickets/Dockerfile
+++ b/tickets/Dockerfile
@@ -1,8 +1,17 @@
-FROM node:alpine
+FROM node:20-alpine
 
 WORKDIR /app
-COPY package.json .
-RUN npm install 
+
+# Copy package files
+COPY package.json package-lock.json* ./
+
+# Install ALL deps (dev + prod)
+RUN npm install
+
+# Copy source code
 COPY . .
 
-CMD [ "npm", "start" ]
+EXPOSE 3000
+
+# Run ts-node-dev in development mode
+CMD ["npm", "run", "start"]
