--- a/infra/ticketing/templates/ingress.yaml
+++ b/infra/ticketing/templates/ingress.yaml
@@ -1,43 +1,51 @@
-{{- if .Values.ingress.enabled -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "ticketing.fullname" . }}
-  labels:
-    {{- include "ticketing.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
+  name: {{ include "ticketing.fullname" . }}-ingress
   annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
-  {{- with .Values.ingress.className }}
-  ingressClassName: {{ . }}
-  {{- end }}
-  {{- if .Values.ingress.tls }}
-  tls:
-    {{- range .Values.ingress.tls }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      secretName: {{ .secretName }}
-    {{- end }}
-  {{- end }}
+  ingressClassName: nginx
   rules:
-    {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
+    - host: {{ .Values.ingress.host }}
       http:
         paths:
-          {{- range .paths }}
-          - path: {{ .path }}
-            {{- with .pathType }}
-            pathType: {{ . }}
-            {{- end }}
+          - path: /api/users/?(.*)
+            pathType: ImplementationSpecific
             backend:
               service:
-                name: {{ include "ticketing.fullname" $ }}
+                name: {{ include "ticketing.fullname" . }}-auth-srv
                 port:
-                  number: {{ $.Values.service.port }}
-          {{- end }}
-    {{- end }}
-{{- end }}
+                  number: 3000
+
+          - path: /api/tickets/?(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: {{ include "ticketing.fullname" . }}-tickets-srv
+                port:
+                  number: 3000
+
+          - path: /api/orders/?(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: {{ include "ticketing.fullname" . }}-orders-srv
+                port:
+                  number: 3000
+
+          - path: /api/payments/?(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: {{ include "ticketing.fullname" . }}-payments-srv
+                port:
+                  number: 3000
+
+          - path: /?(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: {{ include "ticketing.fullname" . }}-frontend-srv
+                port:
+                  number: 3000
