refactor(nats): simplify NATS deployment configuration and remove unused parameters

--- a/infra/ticketing/templates/nats.yaml
+++ b/infra/ticketing/templates/nats.yaml
@@ -4,9 +4,8 @@ metadata:
   name: {{ include "ticketing.fullname" . }}-nats
   labels:
     app: nats
-    {{- include "ticketing.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.nats.replicaCount }}
+  replicas: 1
   selector:
     matchLabels:
       app: nats
@@ -14,25 +13,17 @@ spec:
     metadata:
       labels:
         app: nats
-        {{- include "ticketing.labels" . | nindent 8 }}
     spec:
       containers:
         - name: nats
-          image: "{{ .Values.nats.image.repository }}:{{ .Values.nats.image.tag }}"
+          image: nats-streaming:0.22.0
           args:
-            - "-p"
-            - "4222"
-            - "-m"
-            - "8222"
-            - "-hbi"
-            - "5s"
-            - "-hbt"
-            - "5s"
-            - "-hbf"
-            - "2"
-            - "-SD"
-            - "-cid"
-            - "ticketing"
+            - "--cluster_id=ticketing"
+            - "--store=memory"
+            - "--cluster_log_path=/data"
+          ports:
+            - containerPort: 4222
+              name: client
 ---
 apiVersion: v1
 kind: Service
@@ -43,10 +34,5 @@ spec:
     app: nats
   ports:
     - name: client
-      protocol: TCP
       port: 4222
       targetPort: 4222
-    - name: monitoring
-      protocol: TCP
-      port: 8222
-      targetPort: 8222
