--- a/infra/ticketing/values.yaml
+++ b/infra/ticketing/values.yaml
@@ -58,3 +58,14 @@ ordersMongo:
   image:
     repository: mongo
     tag: latest
+
+expiration:
+  image:
+    repository: mohammedrisvanvm/expiration
+    tag: latest
+  replicaCount: 1
+
+redis:
+  image:
+    repository: redis
+    tag: latest
