feat(helm): add Helm templates and values for payments and payments-mongo services

--- a/infra/ticketing/values.yaml
+++ b/infra/ticketing/values.yaml
@@ -69,3 +69,10 @@ redis:
   image:
     repository: redis
     tag: latest
+
+payments:
+  image:
+    repository: mohammedrisvanvm/payments
+    tag: latest
+  replicaCount: 1
+
