feat(helm): add Helm templates and values for frontend service

--- a/infra/ticketing/values.yaml
+++ b/infra/ticketing/values.yaml
@@ -76,3 +76,8 @@ payments:
     tag: latest
   replicaCount: 1
 
+frontend:
+  image:
+    repository: mohammedrisvanvm/frontend
+    tag: latest
+  replicaCount: 1
