--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,9 +1,6 @@
-apiVersion: skaffold/v2alpha3
+apiVersion: skaffold/v4beta9
 kind: Config
-deploy:
-  kubectl:
-    manifests:
-      - ./infra/k8s/*
+
 build:
   local:
     push: false
@@ -17,7 +14,7 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: "src/**.*.ts"
+          - src: "src/**/*.ts"
             dest: .
     - image: mohammedrisvanvm/tickets
       context: tickets
@@ -25,7 +22,7 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: "src/**.*.ts"
+          - src: "src/**/*.ts"
             dest: .
     - image: mohammedrisvanvm/orders
       context: orders
@@ -33,7 +30,7 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: "src/**.*.ts"
+          - src: "src/**/*.ts"
             dest: .
     - image: mohammedrisvanvm/expiration
       context: expiration
@@ -41,7 +38,7 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: "src/**.*.ts"
+          - src: "src/**/*.ts"
             dest: .
     - image: mohammedrisvanvm/payments
       context: payments
@@ -49,7 +46,7 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: "src/**.*.ts"
+          - src: "src/**/*.ts"
             dest: .
     - image: mohammedrisvanvm/frontend
       context: frontend
@@ -57,15 +54,20 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: "**/*.tsx"
+          - src: "**/*.*"
             dest: .
-          - src: "**/*.ts"
-            dest: .
-          - src: "**/*.js"
-            dest: .
-          - src: "**/*.jsx"
-            dest: .
-          - src: "**/*.css"
-            dest: .
-          - src: "**/*.scss"
-            dest: .
+
+deploy:
+  helm:
+    releases:
+      - name: ticketing
+        chartPath: infra/ticketing   # ✅ Correct path to your helm chart
+        wait: true
+        skipBuildDependencies: true
+        setValues:
+          auth.image.repository: mohammedrisvanvm/auth
+          tickets.image.repository: mohammedrisvanvm/tickets
+          orders.image.repository: mohammedrisvanvm/orders
+          expiration.image.repository: mohammedrisvanvm/expiration
+          payments.image.repository: mohammedrisvanvm/payments
+          frontend.image.repository: mohammedrisvanvm/frontend
