--- a/infra/ticketing/templates/expiration-redis.yaml
+++ b/infra/ticketing/templates/expiration-redis.yaml
@@ -21,6 +21,19 @@ spec:
           image: "{{ .Values.redis.image.repository }}:{{ .Values.redis.image.tag }}"
           ports:
             - containerPort: 6379
+
+          readinessProbe:
+            tcpSocket:
+              port: 6379
+            initialDelaySeconds: 2
+            periodSeconds: 2
+            failureThreshold: 20
+
+          livenessProbe:
+            tcpSocket:
+              port: 6379
+            initialDelaySeconds: 5
+            periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
