--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -84,4 +84,4 @@ jobs:
 
       - name: Deploy using Helm
         run: |
-          helm upgrade --install ticketing ./infra/ticketing --namespace default
+          helm upgrade --install ticketing . --namespace default
