--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Build, Push and Deploy Ticketing Services
+name: Build and Push Docker Images
 
 on:
   push:
@@ -58,30 +58,3 @@ jobs:
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend:${TAG} -t ${{ secrets.DOCKER_USERNAME }}/frontend:latest ./frontend
       - name: Push Frontend image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/frontend --all-tags
-
-
-  # -----------------------------
-  # AUTO DEPLOY TO KUBERNETES 👇
-  # -----------------------------
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-and-push
-
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Install kubectl
-        uses: azure/setup-kubectl@v4
-
-      - name: Setup kubeconfig
-        run: |
-          mkdir -p ~/.kube
-          echo "${{ secrets.KUBE_CONFIG }}" > ~/.kube/config
-
-      - name: Install Helm
-        uses: azure/setup-helm@v4
-
-      - name: Deploy using Helm
-        run: |
-          helm upgrade --install ticketing . --namespace default
