--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,9 +6,38 @@ on:
       - main
 
 jobs:
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      auth: ${{ steps.filter.outputs.auth }}
+      tickets: ${{ steps.filter.outputs.tickets }}
+      orders: ${{ steps.filter.outputs.orders }}
+      expiration: ${{ steps.filter.outputs.expiration }}
+      payments: ${{ steps.filter.outputs.payments }}
+      frontend: ${{ steps.filter.outputs.frontend }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Detect changed folders
+        id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            auth:
+              - 'auth/**'
+            tickets:
+              - 'tickets/**'
+            orders:
+              - 'orders/**'
+            expiration:
+              - 'expiration/**'
+            payments:
+              - 'payments/**'
+            frontend:
+              - 'frontend/**'
+
   build-and-push:
     runs-on: ubuntu-latest
-
+    needs: changes
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -19,42 +48,48 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Set Docker image tag (short SHA)
+      - name: Set Docker image tag
         id: vars
         run: echo "TAG=$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
 
-      # AUTH SERVICE
-      - name: Build Auth image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/auth:${TAG} -t ${{ secrets.DOCKER_USERNAME }}/auth:latest ./auth
-      - name: Push Auth image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/auth --all-tags
+      # AUTH
+      - name: Build & Push Auth
+        if: needs.changes.outputs.auth == 'true'
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/auth:${TAG} -t ${{ secrets.DOCKER_USERNAME }}/auth:latest ./auth
+          docker push ${{ secrets.DOCKER_USERNAME }}/auth --all-tags
 
-      # TICKETS SERVICE
-      - name: Build Tickets image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/tickets:${TAG} -t ${{ secrets.DOCKER_USERNAME }}/tickets:latest ./tickets
-      - name: Push Tickets image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/tickets --all-tags
+      # TICKETS
+      - name: Build & Push Tickets
+        if: needs.changes.outputs.tickets == 'true'
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/tickets:${TAG} -t ${{ secrets.DOCKER_USERNAME }}/tickets:latest ./tickets
+          docker push ${{ secrets.DOCKER_USERNAME }}/tickets --all-tags
 
-      # ORDERS SERVICE
-      - name: Build Orders image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/orders:${TAG} -t ${{ secrets.DOCKER_USERNAME }}/orders:latest ./orders
-      - name: Push Orders image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/orders --all-tags
+      # ORDERS
+      - name: Build & Push Orders
+        if: needs.changes.outputs.orders == 'true'
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/orders:${TAG} -t ${{ secrets.DOCKER_USERNAME }}/orders:latest ./orders
+          docker push ${{ secrets.DOCKER_USERNAME }}/orders --all-tags
 
-      # EXPIRATION SERVICE
-      - name: Build Expiration image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/expiration:${TAG} -t ${{ secrets.DOCKER_USERNAME }}/expiration:latest ./expiration
-      - name: Push Expiration image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/expiration --all-tags
+      # EXPIRATION
+      - name: Build & Push Expiration
+        if: needs.changes.outputs.expiration == 'true'
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/expiration:${TAG} -t ${{ secrets.DOCKER_USERNAME }}/expiration:latest ./expiration
+          docker push ${{ secrets.DOCKER_USERNAME }}/expiration --all-tags
 
-      # PAYMENTS SERVICE
-      - name: Build Payments image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/payments:${TAG} -t ${{ secrets.DOCKER_USERNAME }}/payments:latest ./payments
-      - name: Push Payments image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/payments --all-tags
+      # PAYMENTS
+      - name: Build & Push Payments
+        if: needs.changes.outputs.payments == 'true'
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/payments:${TAG} -t ${{ secrets.DOCKER_USERNAME }}/payments:latest ./payments
+          docker push ${{ secrets.DOCKER_USERNAME }}/payments --all-tags
 
       # FRONTEND
-      - name: Build Frontend image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend:${TAG} -t ${{ secrets.DOCKER_USERNAME }}/frontend:latest ./frontend
-      - name: Push Frontend image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/frontend --all-tags
+      - name: Build & Push Frontend
+        if: needs.changes.outputs.frontend == 'true'
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend:${TAG} -t ${{ secrets.DOCKER_USERNAME }}/frontend:latest ./frontend
+          docker push ${{ secrets.DOCKER_USERNAME }}/frontend --all-tags
