--- a/infra/ticketing/templates/frontend.yaml
+++ b/infra/ticketing/templates/frontend.yaml
@@ -21,6 +21,13 @@ spec:
           image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}"
           ports:
             - containerPort: 3000
+      resources:
+            requests:
+              cpu: "100m"
+              memory: "256Mi"
+            limits:
+              cpu: "300m"
+              memory: "512Mi"
 ---
 apiVersion: v1
 kind: Service
