--- a/infra/ticketing/templates/nats.yaml
+++ b/infra/ticketing/templates/nats.yaml
@@ -24,6 +24,13 @@ spec:
           ports:
             - containerPort: 4222
               name: client
+      resources:
+            requests:
+              cpu: "100m"
+              memory: "256Mi"
+            limits:
+              cpu: "300m"
+              memory: "512Mi"
 ---
 apiVersion: v1
 kind: Service
