--- a/infra/argocd/argocd-ingress.yaml
+++ b/infra/argocd/argocd-ingress.yaml
@@ -4,11 +4,11 @@ metadata:
   name: argocd-server-ingress
   namespace: argocd
   annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
 spec:
   rules:
-    - host: argocd.local
+    - host: localhost
       http:
         paths:
           - path: /
@@ -17,4 +17,4 @@ spec:
               service:
                 name: argocd-server
                 port:
-                  number: 443
+                  number: 80
