--- a/infra/ticketing/templates/auth.yaml
+++ b/infra/ticketing/templates/auth.yaml
@@ -27,6 +27,13 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
+      resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "300m"
+              memory: "256Mi"
 ---
 apiVersion: v1
 kind: Service
