--- a/infra/ticketing/templates/expiration-redis.yaml
+++ b/infra/ticketing/templates/expiration-redis.yaml
@@ -34,6 +34,13 @@ spec:
               port: 6379
             initialDelaySeconds: 5
             periodSeconds: 5
+      resources:
+            requests:
+              cpu: "100m"
+              memory: "256Mi"
+            limits:
+              cpu: "300m"
+              memory: "512Mi"
 ---
 apiVersion: v1
 kind: Service
