--- a/infra/ticketing/templates/orders.yaml
+++ b/infra/ticketing/templates/orders.yaml
@@ -39,6 +39,14 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
+      resources:
+            requests:
+              cpu: "150m"
+              memory: "256Mi"
+            limits:
+              cpu: "400m"
+              memory: "512Mi"
+
 ---
 apiVersion: v1
 kind: Service
