--- a/infra/ticketing/templates/payments-mongo.yaml
+++ b/infra/ticketing/templates/payments-mongo.yaml
@@ -19,6 +19,13 @@ spec:
           image: mongo
           ports:
             - containerPort: 27017
+      resources:
+            requests:
+              cpu: "250m"
+              memory: "512Mi"
+            limits:
+              cpu: "500m"
+              memory: "1Gi"
 ---
 apiVersion: v1
 kind: Service
