--- a/infra/ticketing/templates/payments.yaml
+++ b/infra/ticketing/templates/payments.yaml
@@ -45,6 +45,13 @@ spec:
                 secretKeyRef:
                   name: stripe-secret
                   key: STRIPE_KEY
+      resources:
+            requests:
+              cpu: "200m"
+              memory: "256Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
 ---
 apiVersion: v1
 kind: Service
