--- a/infra/ticketing/templates/tickets-mongo.yaml
+++ b/infra/ticketing/templates/tickets-mongo.yaml
@@ -19,6 +19,13 @@ spec:
       containers:
         - name: tickets-mongo
           image: "{{ .Values.ticketsMongo.image.repository }}:{{ .Values.ticketsMongo.image.tag }}"
+      resources:
+            requests:
+              cpu: "250m"
+              memory: "512Mi"
+            limits:
+              cpu: "500m"
+              memory: "1Gi"
 
 ---
 apiVersion: v1
