--- a/infra/ticketing/templates/auth-mongo.yaml
+++ b/infra/ticketing/templates/auth-mongo.yaml
@@ -19,13 +19,8 @@ spec:
       containers:
         - name: auth-mongo
           image: "{{ .Values.authMongo.image.repository }}:{{ .Values.authMongo.image.tag }}"
-      resources:
-            requests:
-              cpu: "250m"
-              memory: "512Mi"
-            limits:
-              cpu: "500m"
-              memory: "1Gi"
+          resources:
+            {{- toYaml .Values.authMongo.resources | nindent 12 }}
 
 ---
 apiVersion: v1
