--- a/infra/ticketing/templates/nats.yaml
+++ b/infra/ticketing/templates/nats.yaml
@@ -24,13 +24,8 @@ spec:
           ports:
             - containerPort: 4222
               name: client
-      resources:
-            requests:
-              cpu: "100m"
-              memory: "256Mi"
-            limits:
-              cpu: "300m"
-              memory: "512Mi"
+          resources:
+      {{- toYaml .Values.nats.resources | nindent 12 }}
 ---
 apiVersion: v1
 kind: Service
