--- a/infra/ticketing/templates/orders-mongo.yaml
+++ b/infra/ticketing/templates/orders-mongo.yaml
@@ -17,13 +17,8 @@ spec:
       containers:
         - name: orders-mongo
           image: "{{ .Values.ordersMongo.image.repository }}:{{ .Values.ordersMongo.image.tag }}"
-      resources:
-            requests:
-              cpu: "250m"
-              memory: "512Mi"
-            limits:
-              cpu: "500m"
-              memory: "1Gi"
+          resources:
+      {{- toYaml .Values.ordersMongo.resources | nindent 12 }}
 ---
 apiVersion: v1
 kind: Service
