--- a/infra/ticketing/templates/orders.yaml
+++ b/infra/ticketing/templates/orders.yaml
@@ -39,13 +39,8 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
-      resources:
-            requests:
-              cpu: "150m"
-              memory: "256Mi"
-            limits:
-              cpu: "400m"
-              memory: "512Mi"
+          resources:
+            {{- toYaml .Values.orders.resources | nindent 12 }}
 
 ---
 apiVersion: v1
