--- a/infra/ticketing/templates/payments.yaml
+++ b/infra/ticketing/templates/payments.yaml
@@ -45,13 +45,8 @@ spec:
                 secretKeyRef:
                   name: stripe-secret
                   key: STRIPE_KEY
-      resources:
-            requests:
-              cpu: "200m"
-              memory: "256Mi"
-            limits:
-              cpu: "500m"
-              memory: "512Mi"
+          resources:
+            {{- toYaml .Values.payments.resources | nindent 12 }}
 ---
 apiVersion: v1
 kind: Service
